<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@drawable/input_mode"
        android:padding="@dimen/mHor"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/inpN"
            android:layout_marginVertical="@dimen/mver"
            android:layout_marginHorizontal="@dimen/mHor"
            android:layout_marginTop="@dimen/mHor"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inpnama"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/mver"
            android:layout_marginHorizontal="@dimen/mHor"
            android:background="@drawable/input_mode">
            <Spinner
                android:id="@+id/jenisKl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/mver"
                android:layout_marginVertical="@dimen/mHor"
                style="@style/TextAppearance.AppCompat.Widget.DropDownItem"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/inpU"
            android:layout_marginVertical="@dimen/mver"
            android:layout_marginHorizontal="@dimen/mHor"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inpumur"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/inpE"
            android:layout_marginVertical="@dimen/mver"
            android:layout_marginHorizontal="@dimen/mHor"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inpemail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/inpT"
            android:layout_marginVertical="@dimen/mver"
            android:layout_marginHorizontal="@dimen/mHor"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inpTelp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:maxLines="1"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/inpA"
            android:layout_marginVertical="@dimen/mver"
            android:layout_marginHorizontal="@dimen/mHor"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inpAlamat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="4"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/outlinedButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Simpan"
            android:layout_marginVertical="@dimen/mver"
            android:layout_marginHorizontal="@dimen/mHor"
            android:textSize="15sp"
            style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
            />

    </LinearLayout>
</LinearLayout>