<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfilActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@drawable/input_mode"
        android:padding="@dimen/mHor">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/judul"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/mver"
                android:gravity="center"
                android:text="Biodata"
                android:textSize="20sp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:layout_marginVertical="@dimen/mver"
                android:src="@drawable/ic_account_circle" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="@dimen/mHor"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="@dimen/mver"
                        android:text="@string/inpN"
                        android:textSize="@dimen/tb" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="@dimen/mver"
                        android:text="Jenis Kelamin"
                        android:textSize="@dimen/tb" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="@dimen/mver"
                        android:text="@string/inpU"
                        android:textSize="@dimen/tb" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="@dimen/mver"
                        android:text="@string/inpE"
                        android:textSize="@dimen/tb" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="@dimen/mver"
                        android:text="@string/inpT"
                        android:textSize="@dimen/tb" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="@dimen/mver"
                        android:text="@string/inpA"
                        android:textSize="@dimen/tb" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/mHor"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tnama"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="@dimen/mver"
                        android:textSize="@dimen/tb" />

                    <TextView
                        android:id="@+id/tjk"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="@dimen/mver"
                        android:textSize="@dimen/tb" />

                    <TextView
                        android:id="@+id/tumur"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="@dimen/mver"
                        android:textSize="@dimen/tb" />

                    <TextView
                        android:id="@+id/temail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="@dimen/mver"
                        android:textSize="@dimen/tb" />

                    <TextView
                        android:id="@+id/ttelp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="@dimen/mver"
                        android:textSize="@dimen/tb" />

                    <TextView
                        android:id="@+id/tamt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="@dimen/mver"
                        android:textSize="@dimen/tb" />
                </LinearLayout>
            </LinearLayout>
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_margin="@dimen/mver">

                <Button
                    android:id="@+id/edit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="edit nama"
                    app:layout_constraintStart_toStartOf="parent"
                    tools:layout_editor_absoluteY="0dp"
                    tools:ignore="MissingConstraints" />

                <Button
                    android:id="@+id/dial"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/mHor"
                    android:text="Dial"
                    app:layout_constraintEnd_toStartOf="@+id/about"
                    app:layout_constraintStart_toEndOf="@+id/edit"
                    tools:layout_editor_absoluteY="0dp"
                    tools:ignore="MissingConstraints" />

                <Button
                    android:id="@+id/about"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/mHor"
                    android:text="About"
                    app:layout_constraintEnd_toEndOf="parent"
                    tools:layout_editor_absoluteY="0dp"
                    tools:ignore="MissingConstraints" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>